@@ -24,6 +24,7 @@ since 1999.  If I missed your name, let me know.
 * Luigi Balzano
 * Sebastien Barbereau
 * Wolfgang Barth
+* Devin Bayer
 * Simon Beale
 * Ben Bell
 * Marlo Bell
